[metadata]
name = mrh
version = 0.0.1
author = Reza Heydarian
author_email = mrh110@gmail.com
description = To practice building a package!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mrh110/mrh
project_urls =
    Lab url = https://biomedic.ai
classifiers =
    Programming Language :: Python :: 3
    License :: Creative Commons :: CC BY-NC-ND 4.0
    Operating System :: OS Independent

[options]
package_dir =
    = mrh
packages = find:
python_requires = >=3.6

[options.packages.find]
where = mrh
